--- a/index.html
+++ b/index.html
@@ -7,13 +7,33 @@
 	</head>
 
 	<body>
+		<div>
 		<img id="banner" src="banner.jpg">
 
-		<h1>Sobre a Educação financeira</h1>
+		<p id="dolado" >Sobre a Educação financeira</p>
  
-		<p>A educação financeira é uma área transversal e transdisciplinar cujo propósito é auxiliar indivíduos na escolha de seus rendimentos, em seus sonhos, no consumo sustentável, em suas decisões sobre investimentos, e na prevenção de situações problemáticas;</p>
 
-		<p>não deve ser confundida com a matemática financeira, enquanto a primeira se trata de uma área que comunica com as outras como a economia, biologia (meio ambiente e saúde), história, sociologia, geografia, etc., a segunda é específica da matemática.[1][2][3][4] </p>
+        </div>
+		
+
+
+		<p><strong>A educação financeira é uma área transversal e transdisciplinar cujo propósito é auxiliar indivíduos na escolha de seus rendimentos, em seus sonhos, no consumo sustentável, em suas decisões sobre investimentos, e na prevenção de situações problemáticas;</strong></p>
+
+		<p><strong>não deve ser confundida com a matemática financeira, enquanto a primeira se trata de uma área que comunica com as outras como a economia, biologia (meio ambiente e saúde), história, sociologia, geografia, etc., a segunda é específica da matemática.[1][2][3][4]</strong> </p>
+
+		<img src="imagem.jpg">
+
+		<ul id="listal">
+
+		<h1>investimentos de renda fixa</h1>
+		<li>Tesouro Direto</li>
+		<li>CDB (Certificado de Depósito Bancário)</li>
+		<li>LCI (Letra de Crédito Imobiliário)</li>
+		<li>Poupança</li>
+		<li>Fundos de renda fixa</li>
+		<li>LCA (Letra de Crédito do Agronegócio)</li>	
+
+
 
 	</body>
 </html>
